[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-supervisor>=0.0.31",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
